--- a/index.html
+++ b/index.html
@@ -10,7 +10,30 @@
 </head>
 
 <body>
-    
+    <header class="header">
+
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre">Utn<span>Wallet</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="#" class="navegacion__enlace">Nosotros</a>
+                    <a href="#" class="navegacion__enlace">Sobre Criptos</a>
+                    <a href="#" class="navegacion__enlace">Iniciar Sesion</a>
+                    <a href="#" class="navegacion__enlace">Registrarse</a>
+                </nav>
+
+            </div>
+        </div>
+
+        <div class="header__texto">
+            <h2 class="">Crompra y vende criptos de forma sencilla!</h2>
+            <p class="">Ingresar al mundo cripto es simple</p>
+        </div>
+
+    </header>
 </body>
 
 </html>
