--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 <body>
     <header class="header">
 
-        <div class="contenedor">
-            <div class="barra">
+        <div class="nav-bg">
+
+            <div class="contenedor">
+
                 <a class="logo" href="index.html">
                     <h1 class="logo__nombre">Utn<span>Wallet</span></h1>
                 </a>
 
-                <nav class="navegacion">
+                <nav class="navegacion-principal">
                     <a href="#" class="navegacion__enlace">Nosotros</a>
                     <a href="#" class="navegacion__enlace">Sobre Criptos</a>
                     <a href="#" class="navegacion__enlace">Iniciar Sesion</a>
@@ -29,11 +31,18 @@
                 </nav>
 
             </div>
+
         </div>
 
-        <div class="header__texto">
-            <h2 class="">Crompra y vende criptos de forma sencilla!</h2>
-            <p class="">Ingresar al mundo cripto es simple</p>
+        <div class="header__texto img-bg">
+            <div class="contenedor bottom">
+                <h2 class="">Crompra y vende criptos de forma sencilla!</h2>
+                <p class="">Ingresar al mundo cripto es simple</p>    
+            
+                <a class="boton" href="#">Ingresar</a>
+
+            </div>
+
         </div>
 
     </header>
